Closed Bug 240724 Opened 22 years ago Closed 22 years ago

Memory leak in nsAccessibleWrap.cpp

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: pkwarren, Assigned: pkwarren)

Details

(Keywords: fixed1.7, memory-leak)

Attachments

(1 file)

I have found a small memory leak in nsAccessibleWrap.cpp. Patch upcoming.
Attached patch Patch v1Splinter Review
mInterfaces is initialzed with the following: mInterfaces = new MaiInterfacePointer[MAI_INTERFACE_NUM]; But it is never deleted in the destructor.
Assignee: aaronleventhal → pkw
Status: NEW → ASSIGNED
Attachment #146287 - Flags: superreview?(Henry.Jia)
Attachment #146287 - Flags: review?(kyle.yuan)
Severity: normal → critical
Comment on attachment 146287 [details] [diff] [review] Patch v1 nice catch. r=kyle.
Attachment #146287 - Flags: review?(kyle.yuan) → review+
Comment on attachment 146287 [details] [diff] [review] Patch v1 sr=Henry
Attachment #146287 - Flags: superreview?(Henry.Jia) → superreview+
Comment on attachment 146287 [details] [diff] [review] Patch v1 Requesting approval for a simple memory leak fix in the accessibility code.
Attachment #146287 - Flags: approval1.7?
Patch checked in to trunk. Still waiting on 1.7 approval before marking this fixed. Checking in nsAccessibleWrap.cpp; /cvsroot/mozilla/accessible/src/atk/nsAccessibleWrap.cpp,v <-- nsAccessibleWrap.cpp new revision: 1.11; previous revision: 1.10 done
Comment on attachment 146287 [details] [diff] [review] Patch v1 a=mkaply
Attachment #146287 - Flags: approval1.7? → approval1.7+
Checked in to 1.7 branch. Checking in nsAccessibleWrap.cpp; /cvsroot/mozilla/accessible/src/atk/nsAccessibleWrap.cpp,v <-- nsAccessibleWrap.cpp new revision: 1.10.2.1; previous revision: 1.10 done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Keywords: fixed1.7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: