Bug 240724 - Memory leak in nsAccessibleWrap.cpp r=kyle.yuan@sun.com, sr=Henry.Jia@sun.com